<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 <RelativeLayout
        android:id="@+id/top_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_bg"
         >
         <TextView
            android:id="@+id/title_tv"
         	android:layout_width="match_parent"
         	android:layout_height="40dp"
         	android:gravity="center"
         	android:text="@string/test_printer"
			android:textSize="25sp"
         	android:textColor="#fff"

         	android:layout_centerVertical="true"
         />
        <ImageView 
            android:id="@+id/back_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
        	android:background="@drawable/back"
        	android:layout_centerVertical="true"
        	android:layout_marginLeft="5dp"
        	android:onClick="back"
            />   
	 </RelativeLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/top_bg"
        android:id="@+id/bt_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
		android:textSize="16sp"
        android:text="@string/printtext"
         />
      <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/top_bg"
        android:id="@+id/bt_barcode"
        android:layout_alignParentRight="true"
		  android:layout_width="200dp"
		  android:layout_height="50dp"
		  android:textSize="16sp"
        android:text="@string/printbarcode"
        />
       <Button
        android:id="@+id/bt_qr"
        android:layout_below="@+id/bt_barcode"
		   android:layout_width="200dp"
		   android:layout_height="50dp"
		   android:textSize="16sp"
		   android:layout_marginTop="10dp"
        android:text="@string/printqrcode"
        />
        <Button
        android:id="@+id/bt_image"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_barcode"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"
        android:text="@string/printpicture"
        />

       <Button
        android:id="@+id/bt_printtestpage"
        android:layout_below="@+id/bt_image"
		   android:layout_width="200dp"
		   android:layout_height="50dp"
		   android:textSize="16sp"
         android:layout_marginTop="10dp"

         android:onClick="printtestpage"
        android:text="@string/printtestpage"
        
        />
       <Button
        android:id="@+id/bt_checkpage"
        android:layout_below="@+id/bt_image"
        android:layout_alignParentRight="true"
		   android:layout_width="200dp"
		   android:layout_height="50dp"
		   android:textSize="16sp"
         android:layout_marginTop="10dp"

         android:onClick="checkpage"  
        android:text="@string/check_for_paper"
         />
       <Button
        android:id="@+id/bt_cuttall"
        android:layout_below="@+id/bt_checkpage"
		   android:layout_width="200dp"
		   android:layout_height="50dp"
		   android:textSize="16sp"
         android:layout_marginTop="10dp"
        android:text="@string/cuttall_paper"
        />
       <Button
        android:id="@+id/bt_cutting"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_checkpage"
		   android:layout_width="200dp"
		   android:layout_height="50dp"
		   android:textSize="16sp"
         android:layout_marginTop="10dp"
        android:text="@string/cutting_paper"
         />
		<Button
        android:id="@+id/bt_nocutting"
        android:layout_below="@+id/bt_cutting"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"
          android:visibility="gone"      
        android:text=""
         />
	    <Button
         android:id="@+id/bt_queueprint"
        android:layout_below="@+id/bt_nocutting"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"

        android:text="@string/queue_print"
         />
	    <Button
        android:id="@+id/bt_textimage"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_nocutting"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"

        android:text="文字图片打印"
         />
		<Button
        android:id="@+id/bt_printdemo1"
         android:layout_alignParentRight="true"
        android:layout_below="@+id/bt_queueprint"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"

        android:text="两寸小票打印"
         />
		<Button
        android:id="@+id/bt_printdemo2"
        android:layout_below="@+id/bt_queueprint"
			android:layout_width="200dp"
			android:layout_height="50dp"
			android:textSize="16sp"
         android:layout_marginTop="10dp"

        android:text="三寸小票打印"
         />
		<TextView 
		       android:layout_below="@+id/bt_printdemo2"
		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:background="#ffffff"
        	android:text="66666"
        	android:id="@+id/textiamge_tv"
        	android:visibility="invisible"
		    />
</RelativeLayout>
