
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutUSBDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    </LinearLayout>
    <Button
        android:layout_marginTop="6dp"
        android:layout_below="@+id/linearLayoutUSBDevices"
        android:id="@+id/search_print_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_printer"
        />
    <Button
        android:layout_marginTop="6dp"
        android:layout_below="@+id/search_print_bt"
        android:id="@+id/closeusb_bt"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="关闭USB连接"
        />

    <Button
        android:layout_marginTop="6dp"
        android:layout_below="@+id/closeusb_bt"
        android:id="@+id/ptprint_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="打印测试"
        />

    <TextView
        android:layout_marginTop="5dp"

        android:layout_below="@+id/ptprint_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_state"
        android:textSize="20sp"
        android:id="@+id/tt"
        />
    <TextView
        android:layout_marginTop="5dp"

        android:layout_below="@+id/ptprint_bt"
        android:layout_toRightOf="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unconnected"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/usbconnt_tv"
        />



</RelativeLayout>